RESOLVED FIXED70856
AX: WebKit does not expose HTML label for slider elements
https://bugs.webkit.org/show_bug.cgi?id=70856
Summary AX: WebKit does not expose HTML label for slider elements
chris fleizach
Reported 2011-10-25 15:29:22 PDT
WebKit does not expose label for slider elements
Attachments
patch (5.01 KB, patch)
2011-10-25 16:11 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2011-10-25 15:29:32 PDT
chris fleizach
Comment 2 2011-10-25 16:11:08 PDT
WebKit Review Bot
Comment 3 2011-10-25 18:44:50 PDT
Comment on attachment 112419 [details] patch Clearing flags on attachment: 112419 Committed r98421: <http://trac.webkit.org/changeset/98421>
WebKit Review Bot
Comment 4 2011-10-25 18:44:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.