AX: WebKit does not expose HTML label for slider elements https://bugs.webkit.org/show_bug.cgi?id=70856

Reviewed by Darin Adler.

Source/WebCore:

Test: platform/mac/accessibility/slider-allows-title-ui-element.html

* accessibility/AccessibilitySlider.h:
(WebCore::AccessibilitySlider::isControl):
* accessibility/mac/WebAccessibilityObjectWrapper.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeNames]):

LayoutTests:

* platform/mac/accessibility/slider-allows-title-ui-element-expected.txt: Added.
* platform/mac/accessibility/slider-allows-title-ui-element.html: Added.


Canonical link: https://commits.webkit.org/87077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98421 268f45cc-cd09-0410-ab3c-d52691b4dbfc