Source/WebCore/accessibility/AccessibilitySlider.h
@@ -53,6 +53,7 @@ private:
     virtual AccessibilityRole roleValue() const { return SliderRole; }    
     virtual bool isSlider() const { return true; }
     virtual bool isInputSlider() const { return true; }
+    virtual bool isControl() const { return true; }
     
     virtual void addChildren();
     
